--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/bin/python3"
+    "python.pythonPath": "C:\\Users\\mirac\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
